<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_customer"
            android:icon="@drawable/ic_iconmonstr_shop_4"
            android:title="@string/titles_customers" />
        <item
            android:id="@+id/nav_orders"
            android:icon="@drawable/ic_iconmonstr_basket_4"
            android:title="@string/titles_orders" />

    </group>

    <item android:title="Прочее">
        <menu>
            <item
                android:id="@+id/nav_manage"
                android:icon="@drawable/ic_menu_manage"
                android:title="@string/titles_settings"/>
            <item
                android:id="@+id/nav_about"
                android:icon="@drawable/ic_help_outline_black_24dp"
                android:title="@string/titles_about" />
        </menu>
    </item>

</menu>
